fixed left align menu

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -22,6 +22,7 @@
 
 .burger {
   margin-top: 10px;
+  float: right;
 }
 
 .title {
